# power_supply_control

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  start.sh  stop.sh
scripts/: run_tests.sh  start.sh
src/: config.py  controller.py  decorators.py  logger.py  main.py  schemas.py  validators.py
src/handlers/: __init__.py  command_handlers.py  file_handlers.py  file_helpers.py  ps_handlers.py
src/utils/: __init__.py  loggers.py
src/v1/: router.py
tests/: test_api.py
