[tool.poetry]
name = "power-supply-control"
version = "0.1.0"
description = ""
authors = ["Lukianov Sviatoslav <lis.sobaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"
flake8 = "^7.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "-p no:cacheprovider"
python_files = ["test_*.py"]
asyncio_mode= "auto"
pythonpath = "src/"
